@@ -245,13 +245,13 @@
   }
 
   internal.COLORS.COLOR_PUNCTUATION = internal.COLORS.COLOR_RESET;
-  internal.COLORS.COLOR_STRING = internal.COLORS.COLOR_BOLD_WHITE;
-  internal.COLORS.COLOR_NUMBER = internal.COLORS.COLOR_BOLD_WHITE;
-  internal.COLORS.COLOR_INDEX = internal.COLORS.COLOR_BOLD_WHITE;
-  internal.COLORS.COLOR_TRUE = internal.COLORS.COLOR_BOLD_WHITE;
-  internal.COLORS.COLOR_FALSE = internal.COLORS.COLOR_BOLD_WHITE;
-  internal.COLORS.COLOR_NULL = internal.COLORS.COLOR_BOLD_WHITE;
-  internal.COLORS.COLOR_UNDEFINED = internal.COLORS.COLOR_BOLD_WHITE;
+  internal.COLORS.COLOR_STRING = internal.COLORS.COLOR_BRIGHT;
+  internal.COLORS.COLOR_NUMBER = internal.COLORS.COLOR_BRIGHT;
+  internal.COLORS.COLOR_INDEX = internal.COLORS.COLOR_BRIGHT;
+  internal.COLORS.COLOR_TRUE = internal.COLORS.COLOR_BRIGHT;
+  internal.COLORS.COLOR_FALSE = internal.COLORS.COLOR_BRIGHT;
+  internal.COLORS.COLOR_NULL = internal.COLORS.COLOR_BRIGHT;
+  internal.COLORS.COLOR_UNDEFINED = internal.COLORS.COLOR_BRIGHT;
 
   internal.NOCOLORS = { };
 
